Include original Zetetic Astronomy, slightly refactor the list to put both ENaGs on top
Source for new file:
http://omgomg.eu/misc/samuel_rowbotham_-_zetetic_astronomy_1ed.pdf

--- a/static/index.html
+++ b/static/index.html
@@ -135,8 +135,9 @@ Its purpose is to preserve and immortalise the history of Flat Earth Theory for 
 
 <h4>19th Century Writings (mostly Samuel Rowbotham and the Universal Zetetic Society)</h4>
 <ul>
+  <li><a href="http://library.tfes.org/library/samuel_rowbotham_-_zetetic_astronomy_1ed.pdf">"Zetetic Astronomy. A Description of several experiments which prove that the surface of the sea is a perfect plane and that the Earth is not a globe!", Samuel 'Parallax' Rowbotham, 1849</a> [PDF]</li>
+  <li><a href="http://library.tfes.org/library/samuel_rowbotham_-_earth_not_a_globe.pdf">"Earth Not A Globe! An Experimental Inquiry into the True Figure of the Earth", Second Edition, Samuel 'Parallax' Rowbotham, 1865</a> [PDF]</li>
   <li><a href="http://library.tfes.org/library/Experimental_Proofs.pdf">"Experimental Proofs (With Illustrated Engravings) That the Surface of Standing Water is Not Convex But Horizontal", Samuel 'Parallax' Rowbotham, 1870</a> [PDF]</li>
-  <li><a href="http://library.tfes.org/library/samuel_rowbotham_-_earth_not_a_globe.pdf">"Earth Not A Globe! An Experimental Inquiry into the True Figure of the Earth", Samuel 'Parallax' Rowbotham, 1865</a> [PDF]</li>
   <li><a href="http://library.tfes.org/library/The_Zetetic_(Volume_1_Number_1)_July_1872.pdf">The Zetetic - A Monthly Journal of Cosmographical Science (Vol. 1, No. 1, July 1872), Edited by B. Chas. Brough.</a> [PDF]</li>
   <li><a href="http://library.tfes.org/library/The_Zetetic_(Volume_2_Number_8_and_9)_October_and_November_1873.pdf">The Zetetic - A Monthly Journal of Cosmographical Science (Vol. 2, No. 8-9, October and November 1873), Edited by Samuel 'Parallax' Rowbotham</a> [PDF]</li>
   <li><a href="http://library.tfes.org/library/Chart_&amp;_Compass.pdf">Chart &amp; Compass, Sextant &amp; Sun-dial, Latitudes &amp; Longitudes, Plumbline &amp; Pendulum, Globe or Plane?, Published by the Zetetic Society</a> [PDF]</li>
