--- a/static/index.html
+++ b/static/index.html
@@ -42,7 +42,7 @@
   </div>
   <div id="nav">
     <ul>
-<li><a href=".">Home</a></li>
+<li><a href="http://www.tfes.org/">Home</a></li>
 
 <li><a href="http://forum.tfes.org/">Forum</a></li>
 <li><a href="http://wiki.tfes.org/">Wiki</a></li>
